--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,16 @@ authors = ["Robert Moss <mossr@cs.stanford.edu>"]
 version = "0.1.0"
 
 [deps]
+BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 MLBase = "f0e99cf1-93fa-52ec-9ecc-5026115318e0"
+MLDatasets = "eb30cadb-4394-5ae3-aed4-317e484a6458"
+NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 ROCAnalysis = "f535d66d-59bb-5153-8d2b-ef0a426c6aff"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Seaborn = "d2ef9438-c967-53ab-8060-373fdd9e13eb"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
